# Geometria

./: .gitignore  Dockerfile  entrypoint.sh  pruebas.py  pyproject.toml
src/geometria/: __init__.py  areas.py  volumes.py
src/geometria.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_shapes.py
