[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometria"
version = "0.2.0"
description = "Calculadora geométrica para áreas y volúmenes"
authors = [{name = "Karen Soledad Anrrango Yepez", email = "kanrrango5540@utm.edu.ec"}]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
